Changed font, word, and bg color.

--- a/written.html
+++ b/written.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="styles.css">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
@@ -17,11 +17,16 @@
 <body>
     
     <h1>
-        <span class="letter">H</span>
+        <span class="letter">D</span>
         <span class="letter">E</span>
         <span class="letter">L</span>
+        <span class="letter">I</span>
+        <span class="letter">G</span>
+        <span class="letter">H</span>
+        <span class="letter">T</span>
+        <span class="letter">F</span>
+        <span class="letter">U</span>
         <span class="letter">L</span>
-        <span class="letter">O</span>
     </h1>
 
 </body>
